Use unminified bootswatch for now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Indivisible Lincoln</title>
 
-	<link rel="stylesheet" href="bootstrap.min.css"> <!-- Indivisible Lincoln Bootswatch Theme -->
+	<link rel="stylesheet" href="bootstrap.css"> <!-- Indivisible Lincoln Bootswatch Theme -->
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
