--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<title>Indivisible Lincoln</title>
 
-	<link rel="stylesheet" href="bootstrap.css"> <!-- Indivisible Lincoln Bootswatch Theme -->
-	
+	<link rel="stylesheet" href="css/bootstrap.css"> <!-- Indivisible Lincoln Bootswatch Theme -->
+  <link rel="stylesheet" href="css/site.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:900" rel="stylesheet">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -14,13 +17,13 @@
 		var js, fjs = d.getElementsByTagName(s)[0];
 		if (d.getElementById(id)) return;
 		js = d.createElement(s); js.id = id;
-		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+		js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 	<!-- / Facebook SDK -->
 
 	<!-- Navbar -->
-	<nav class="navbar navbar-default navbar-static-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
 	  <div class="container-fluid"> <!-- container-fluid expands the menu outside the container -->
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -30,37 +33,80 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">Indivisible Lincoln</a>
+	      <a class="navbar-brand" href="#">INDIVISIBLE LINCOLN</a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="navbar-main">
+				<!--<a href="" class="btn btn-primary navbar-btn navbar-right" style="margin-left: 5px; margin-right: 5px;">Donate</a>-->
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Home</a></li>
+	        <li><a href="#Home">Home</a></li>
+					<li><a href="#Action">Action</a></li>
+					<li><a href="#Press">Press</a></li>
+					<li><a href="#Resources">Resources</a></li>
+					<li class="donate"><a href="#Donate">Donate</a></li>
 	      </ul>
+				
 	    </div><!-- /.navbar-collapse -->
+			
 	  </div><!-- /.container-fluid -->
 	</nav>
 	<!-- / Navbar -->
 
-  <div class="container">
-
-		<div class="jumbotron col-lg-12" style="text-align: center;">
-		  <img src="IndivisibleLincoln.png" alt="Indivisible Lincoln" style="max-width: 100%;" />
+	<article id="Home" class="row section">
+		<div class="navbarspacing"></div>
+		<div class="container col-lg-12">
+			<img src="IndivisibleLincoln.png" alt="Indivisible Lincoln" class="center-block img-responsive" />
 		</div>
+	</article>
 
-		<!-- Facebook Timeline -->
-		<div style="text-align: center;">
-		  <div class="fb-page" data-href="https://www.facebook.com/indivisiblelincoln/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/indivisiblelincoln/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/indivisiblelincoln/">Indivisible Lincoln</a></blockquote></div>
-		</div>
-		<!-- / Facebook Timeline -->
-
+	<div class="row section white">
+    <div class="container col-xs-12" style="text-align: center;">
+			<img src="http://placehold.it/300x400" />
+			<img src="http://placehold.it/400x400" />
+			<img src="http://placehold.it/300x400" />
+			<h3 style="margin-top: 70px; font-style: italic;">The Salvation of the State is the Watchfulness in the Citizen</h3>
+	  </div>
   </div>
+	
+	<article id="Action" class="row section">
+    <div class="container">
+			<h1 class="sectionheader">Action</h1>
+	  </div>
+  </article>
+	
+	<article id="Press" class="row section white">
+    <div class="container">
+			<h1 class="sectionheader">Press</h1>
+	  </div>
+  </article>
+
+	<article id="Resources" class="row section">
+    <div class="container">
+			<h1 class="sectionheader">Resources</h1>
+	  </div>
+  </article>
+
+	<article id="Donate" class="row section white">
+    <div class="container">
+			<h1 class="sectionheader">Donate</h1>
+	  </div>
+  </article>
+
+	<article id="Facebook" class="row section">
+    <div class="container">
+			<h1 class="sectionheader">Facebook</h1>
+			<div class="fb-page" data-href="https://www.facebook.com/indivisiblelincoln/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/indivisiblelincoln/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/indivisiblelincoln/">Indivisible Lincoln</a></blockquote></div>
+			</div>
+	  </div>
+  </article>
 
   <!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <!-- / Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
+	<script src="js/site.js"></script>
+	<!-- / Scripts -->
 
 </body>
 </html>
