Add images to home

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
 				<!--<a href="" class="btn btn-primary navbar-btn navbar-right" style="margin-left: 5px; margin-right: 5px;">Donate</a>-->
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#Home">Home</a></li>
-					<li><a href="#Action">Action</a></li>
+					<!--<li><a href="#Action">Action</a></li>
 					<li><a href="#Press">Press</a></li>
-					<li><a href="#Resources">Resources</a></li>
-					<li class="donate"><a href="#Donate">Donate</a></li>
+					<li><a href="#Resources">Resources</a></li>-->
+					<li><a href="#Facebook">Facebook</a></li>
+					<!--<li class="donate"><a href="#Donate">Donate</a></li>-->
 	      </ul>
 				
 	    </div><!-- /.navbar-collapse -->
@@ -62,13 +63,14 @@
 
 	<div class="row section white">
     <div class="container col-xs-12" style="text-align: center;">
-			<img src="http://placehold.it/300x400" />
-			<img src="http://placehold.it/400x400" />
-			<img src="http://placehold.it/300x400" />
+			<img src="images/letter 300x300.jpg" style="max-width: 100%;" />
+			<img src="images/rally 400x300.jpg" style="max-width: 100%;" />
+			<img src="images/stickynotes 300x300.jpg" style="max-width: 100%;" />
 			<h3 style="margin-top: 70px; font-style: italic;">The Salvation of the State is the Watchfulness in the Citizen</h3>
 	  </div>
   </div>
 	
+	<!--
 	<article id="Action" class="row section">
     <div class="container">
 			<h1 class="sectionheader">Action</h1>
@@ -92,6 +94,7 @@
 			<h1 class="sectionheader">Donate</h1>
 	  </div>
   </article>
+	-->
 
 	<article id="Facebook" class="row section">
     <div class="container">
