Center facebook widget

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		var js, fjs = d.getElementsByTagName(s)[0];
 		if (d.getElementById(id)) return;
 		js = d.createElement(s); js.id = id;
-		js.src = "http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 	<!-- / Facebook SDK -->
@@ -99,7 +99,11 @@
 	<article id="Facebook" class="row section">
     <div class="container">
 			<h1 class="sectionheader">Facebook</h1>
-			<div class="fb-page" data-href="https://www.facebook.com/indivisiblelincoln/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/indivisiblelincoln/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/indivisiblelincoln/">Indivisible Lincoln</a></blockquote></div>
+			<div style="text-align: center;">
+				<!-- Facebook timeline -->
+				<div class="fb-page" data-href="https://www.facebook.com/indivisiblelincoln/" data-tabs="timeline" data-width="500" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/indivisiblelincoln/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/indivisiblelincoln/">Indivisible Lincoln</a></blockquote></div>
+				</div>
+				<!-- /Facebook timeline -->
 			</div>
 	  </div>
   </article>
