--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><a href="#Press">Press</a></li>
 					<li><a href="#Resources">Resources</a></li>-->
 					<li><a href="#Facebook">Facebook</a></li>
-					<!--<li class="donate"><a href="#Donate">Donate</a></li>-->
+					<li class="donate"><a href="https://www.paypal.me/IndivisibleLincoln" target="new">Donate</a></li>
 	      </ul>
 				
 	    </div><!-- /.navbar-collapse -->
