Remove explicit background color & use nth-child

--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
 
 	<article id="Home" class="row section">
 		<div class="navbarspacing"></div>
-		<div class="container col-lg-12">
+		<div class="container col-xs-12">
 			<img src="IndivisibleLincoln.png" alt="Indivisible Lincoln" class="center-block img-responsive" />
 		</div>
 	</article>
 
-	<div class="row section white">
+	<article class="row section">
     <div class="container col-xs-12" style="text-align: center;">
 			<img src="images/letter 300x300.jpg" style="max-width: 100%;" />
 			<img src="images/rally 400x300.jpg" style="max-width: 100%;" />
 			<img src="images/stickynotes 300x300.jpg" style="max-width: 100%;" />
 			<h3 style="margin-top: 70px; font-style: italic;">The Salvation of the State is the Watchfulness in the Citizen</h3>
 	  </div>
-  </div>
-	
+  </article>
+
 	<!--
 	<article id="Action" class="row section">
     <div class="container">
