Add some about & action

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 				<!--<a href="" class="btn btn-primary navbar-btn navbar-right" style="margin-left: 5px; margin-right: 5px;">Donate</a>-->
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#Home">Home</a></li>
+					<li><a href="#About">About</a></li>
 					<!--<li><a href="#Action">Action</a></li>
 					<li><a href="#Press">Press</a></li>
 					<li><a href="#Resources">Resources</a></li>-->
@@ -54,49 +55,54 @@
 	</nav>
 	<!-- / Navbar -->
 
-	<article id="Home" class="row section">
-		<div class="navbarspacing"></div>
-		<div class="container col-xs-12">
-			<img src="IndivisibleLincoln.png" alt="Indivisible Lincoln" class="center-block img-responsive" />
-		</div>
+	<article id="Home" class="container-fluid">
+		<img src="IndivisibleLincoln.png" alt="Indivisible Lincoln" class="center-block img-responsive" />
 	</article>
 
-	<article class="row section">
-    <div class="container col-xs-12" style="text-align: center;">
-			<img src="images/letter 300x300.jpg" style="max-width: 100%;" />
+	<article class="container-fluid center-contents">
+			<img src="images/letter 300x300.jpg" class="hidden-xs" style="max-width: 100%;" />
 			<img src="images/rally 400x300.jpg" style="max-width: 100%;" />
-			<img src="images/stickynotes 300x300.jpg" style="max-width: 100%;" />
+			<img src="images/stickynotes 300x300.jpg" class="hidden-md hidden-sm hidden-xs" style="max-width: 100%;" />
 			<h3 style="margin-top: 70px; font-style: italic;">The Salvation of the State is the Watchfulness in the Citizen</h3>
-	  </div>
   </article>
 
-	<!--
-	<article id="Action" class="row section">
+	<article id="About" class="container-fluid">
+		<div class="container">
+			<h1 class="sectionheader">About</h1>
+			<p>Indivisible Lincoln is a grassroots organization made up of regular Nebraskans. We are not backed by a special interest or a political party. We follow the <a href="https://www.indivisibleguide.com/">Indivisible Guide</a> to hold our elected representatives accountable and to protect our community and our state from radical-right legislation.</p>
+			<a href="https://www.indivisibleguide.com/"><img src="images/indivisibleguide.png" alt="Indivisible Guide" class="center-block img-responsive" style="height: 300px; margin-bottom: 20px;"></a>
+			<div class="center-contents"><a href="#Action" class="btn btn-lg btn-primary">Join the Movement</a></div>
+	</article>
+
+	<article id="Action" class="row">
     <div class="container">
 			<h1 class="sectionheader">Action</h1>
+			<p>The easiest way to get involved is by following our <a href="https://www.facebook.com/indivisiblelincoln/">Facebook Page</a> and joining our <a href="https://www.facebook.com/groups/indivisiblelincoln/">Facebook Discussion Group.</a></p>
+			<p><em>Not on Facebook?</em> <a href="mailto:indivisiblelincoln@gmail.com">Send us an email</a> and ask to be added to our email list.</p>
 	  </div>
   </article>
-	
-	<article id="Press" class="row section white">
+  
+<!--
+	<article id="Press" class="row">
     <div class="container">
 			<h1 class="sectionheader">Press</h1>
 	  </div>
   </article>
 
-	<article id="Resources" class="row section">
+	<article id="Resources" class="row">
     <div class="container">
 			<h1 class="sectionheader">Resources</h1>
 	  </div>
   </article>
 
-	<article id="Donate" class="row section white">
+	<article id="Donate" class="row">
     <div class="container">
 			<h1 class="sectionheader">Donate</h1>
 	  </div>
   </article>
 	-->
 
-	<article id="Facebook" class="row section">
+	<article id="Facebook" class="container-fluid">
     <div class="container">
 			<h1 class="sectionheader">Facebook</h1>
 			<div style="text-align: center;">
