Add Action link

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#Home">Home</a></li>
 					<li><a href="#About">About</a></li>
-					<!--<li><a href="#Action">Action</a></li>
-					<li><a href="#Press">Press</a></li>
+					<li><a href="#Action">Action</a></li>
+					<!--<li><a href="#Press">Press</a></li>
 					<li><a href="#Resources">Resources</a></li>-->
 					<li><a href="#Facebook">Facebook</a></li>
 					<li class="donate"><a href="https://www.paypal.me/IndivisibleLincoln" target="new">Donate</a></li>
