Fix some margins

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 		<div class="container">
 			<h1 class="sectionheader">About</h1>
 			<p>Indivisible Lincoln is a grassroots organization made up of regular Nebraskans. We are not backed by a special interest or a political party. We follow the <a href="https://www.indivisibleguide.com/">Indivisible Guide</a> to hold our elected representatives accountable and to protect our community and our state from radical-right legislation.</p>
-			<a href="https://www.indivisibleguide.com/"><img src="images/indivisibleguide.png" alt="Indivisible Guide" class="center-block img-responsive" style="height: 200px; margin-bottom: 40px;"></a>
+			<a href="https://www.indivisibleguide.com/"><img src="images/indivisibleguide.png" alt="Indivisible Guide" class="center-block img-responsive" style="height: 200px; margin-bottom: 60px;"></a>
 			<div class="center-contents"><a href="#Action" class="btn btn-lg btn-primary">Join the Movement</a></div>
 	</article>
 
-	<article id="Action" class="row">
+	<article id="Action" class="container-fluid">
     <div class="container">
 			<h1 class="sectionheader">Action</h1>
 			<p>The easiest way to get involved is by following our <a href="https://www.facebook.com/indivisiblelincoln/">Facebook Page</a> and joining our <a href="https://www.facebook.com/groups/indivisiblelincoln/">Facebook Discussion Group.</a></p>
@@ -83,19 +83,19 @@
   </article>
   
 <!--
-	<article id="Press" class="row">
+	<article id="Press" class="container-fluid">
     <div class="container">
 			<h1 class="sectionheader">Press</h1>
 	  </div>
   </article>
 
-	<article id="Resources" class="row">
+	<article id="Resources" class="container-fluid">
     <div class="container">
 			<h1 class="sectionheader">Resources</h1>
 	  </div>
   </article>
 
-	<article id="Donate" class="row">
+	<article id="Donate" class="container-fluid">
     <div class="container">
 			<h1 class="sectionheader">Donate</h1>
 	  </div>
