Update About section

--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
 	<article id="About" class="container-fluid">
 		<div class="container">
 			<h1 class="sectionheader">About</h1>
-			<p>Indivisible Lincoln is a grassroots organization made up of regular Nebraskans. We are not backed by a special interest or a political party. We follow the <a href="https://www.indivisibleguide.com/">Indivisible Guide</a> to hold our elected representatives accountable and to protect our community and our state from radical-right legislation.</p>
-			<a href="https://www.indivisibleguide.com/"><img src="images/indivisibleguide.png" alt="Indivisible Guide" class="center-block img-responsive" style="height: 200px; margin-bottom: 60px;"></a>
-			<div class="center-contents"><a href="#Action" class="btn btn-lg btn-primary">Join the Movement</a></div>
+			<p>Indivisible Lincoln is a group of Nebraskans living in the 1st Congressional district. We are a grassroots organization run by volunteers. We organize direct interactions with elected officials to protect our community and our state from far-right legislation. We have taken inspiration from the <a href="https://www.indivisibleguide.com/">Indivisible Guide</a> but we have no direct connections to any other organizations.</p>
+			<div class="center-contents">
+				<a href="https://www.indivisibleguide.com/"><img src="images/indivisibleguide.png" alt="Indivisible Guide" style="height: 200px; margin-bottom: 60px;"></a>
+			</div>
+			<div class="center-contents"><a href="#Action" class="btn btn-lg btn-primary">Join the Movement</a>
+		</div>
 	</article>
 
 	<article id="Action" class="container-fluid">
