Add a basic footer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
 			</div>
 	  </div>
   </article>
+	
+	<footer class="footer">
+		<div class="container" style="text-align: center;">
+			<div>Email: <a href="mailto:indivisiblelincoln@gmail.com">indivisiblelincoln@gmail.com</a></div>
+			<div>Facebook: <a href="https://www.facebook.com/indivisiblelincoln/">Indivisible Lincoln</a></div>
+			<div>Twitter: <a href="https://twitter.com/indivisibleLNK">@indivisibleLNK</a></div>
+			<div class="copyright">Copyright &copy; 2017 Indivisible Lincoln</div>
+			<!-- TODO: Add Social Icons -->
+		</div>
+	</footer>
 
   <!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
