--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -45,7 +45,7 @@
 	<article id="OurAd">
 		<img src="Ad.png" alt="Our Omaha World Herald Ad" class="center-block img-responsive" />
 		<div class="container">
-			<p style="margin-top: 50px;">
+			<p style="margin-top: 80px;">
 				Deb Fischer voted against Nebraska families when she voted yes on the Tax Cut and Jobs Act. The law is a giveaway to Deb Fischer's donors while saddling our children with a huge national debt. Due to the removal of the individual mandate fewer Nebraskans will have access to health insurance and those that do will pay more.
 			</p>
 		</div>
@@ -58,21 +58,22 @@
 			<div class="statnote">added to the national debt</div>
 			<div class="stat">10% Increase <span class="source">[2]</span></div>
 			<div class="statnote">in health insurance premiums per year</div>
-			<div class="stat">13 Million <span class="source">[2]</span></div>
+			<div class="stat">13 Million <span class="source">[3]</span></div>
 			<div class="statnote">people losing access health insurance</div>
 		</div>
 		<div class="source">
 			<ul>
 				<li>[1] over 10 years according to the <a href="">Joint Committee on Taxation</a></li>
-				<li>[2] by 2027 according to <a href="https://www.cbo.gov/publication/53300">Congressional Budget Office Estimate</a></li>
+				<li>[2] <a href="https://www.cbo.gov/publication/53300">Congressional Budget Office</a></li>
+				<li>[3] by 2027 according to the <a href="https://www.cbo.gov/publication/53300">Congressional Budget Office</a></li>
 			</ul>
 		</div>
 	</article>
 
 	<article id="Inequality" class="container-fluid">
 		<div class="container">
-			Deb Fischer chose her donors over Nebraska citizens when she voted to make the individual tax cuts expire while making the corporate tax cuts permanent.
-			<table class="table">
+			<p>Deb Fischer chose her donors over Nebraska citizens when she voted to make the individual tax cuts expire while making the corporate tax cuts permanent.</p>
+			<table class="table" style="margin-top: 50px;">
 				<tr>
 					<th class="text-right">Annual Income<div class="small">as of Year 2027</div></th>
 					<th>Tax Change</th>
@@ -94,8 +95,8 @@
 					<td class="text-success">$13,510 Decrease</td>
 				</tr>
 			</table>
+			<div class="source">Source: <a href="https://www.cbpp.org/research/federal-tax/jct-estimates-final-gop-tax-bill-skewed-to-top-hurts-many-low-and-middle-income">Center on Budget and Policy Priorities</a></div>
 		</div>
-		<div class="source">Source: <a href="https://www.cbpp.org/research/federal-tax/jct-estimates-final-gop-tax-bill-skewed-to-top-hurts-many-low-and-middle-income">Center on Budget and Policy Priorities</a></div>
 	</article>
 
 	<article id="Vote" class="container-fluid">
