Add images to income chart

--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -75,24 +75,29 @@
 			<p>Deb Fischer chose her donors over Nebraska citizens when she voted to make the individual tax cuts expire while making the corporate tax cuts permanent.</p>
 			<table class="table" style="margin-top: 50px;">
 				<tr>
-					<th class="text-right">Annual Income<div class="small">as of Year 2027</div></th>
-					<th>Tax Change</th>
+					<th class="text-right">Annual Income</th>
+					<th></th>
+					<th>Tax Change<div class="small">as of Year 2027</div></th>
 				</tr>
 				<tr>
 					<td class="text-right">$20-30K</td>
-					<td class="text-danger">$370 Increase</td>
+					<td class="text-center" style="width: 0;"><img src="nebraska.png"/></td>
+					<td class="text-danger">$370 Tax Increase</td>
 				</tr>
 				<tr>
 					<td class="text-right">$30-50K</td>
-					<td class="text-danger">$300 Increase</td>
+					<td class="text-center" style="width: 0;"><img src="nebraska.png"/></td>
+					<td class="text-danger">$300 Tax Increase</td>
 				</tr>
 				<tr>
 					<td class="text-right">$500K-1M</td>
-					<td class="text-success">$2,550 Decrease</td>
+					<td class="text-center" style="width: 0;"><img src="monopoly.png"/></td>
+					<td class="text-success">$2,550 Tax Break</td>
 				</tr>
 				<tr>
 					<td class="text-right">&gt;$1 Million</td>
-					<td class="text-success">$13,510 Decrease</td>
+					<td class="text-center" style="width: 0;"><img src="monopoly.png"/></td>
+					<td class="text-success">$13,510 Tax Break</td>
 				</tr>
 			</table>
 			<div class="source">Source: <a href="https://www.cbpp.org/research/federal-tax/jct-estimates-final-gop-tax-bill-skewed-to-top-hurts-many-low-and-middle-income">Center on Budget and Policy Priorities</a></div>
