Add more colors

--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -54,12 +54,12 @@
 	<article id="Effects" class="container-fluid">
 		<div class="container">
 			<div class="stattop">Deb Fischer Voted For</div>
-			<div class="stat">$1.5 Trillion <span class="source">[1]</span></div>
+			<div class="stat text-danger">$1.5 Trillion <span class="source">[1]</span></div>
 			<div class="statnote">added to the national debt</div>
-			<div class="stat">10% Increase <span class="source">[2]</span></div>
-			<div class="statnote">in health insurance premiums per year</div>
-			<div class="stat">13 Million <span class="source">[3]</span></div>
-			<div class="statnote">people losing access health insurance</div>
+			<div class="stat text-danger">10% Increase <span class="source">[2]</span></div>
+			<div class="statnote">in health insurance premiums every year</div>
+			<div class="stat text-danger">13 Million People <span class="source">[3]</span></div>
+			<div class="statnote">losing access to health insurance</div>
 		</div>
 		<div class="source">
 			<ul>
