Add voter registration link

--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -106,10 +106,9 @@
 
 	<article id="Vote" class="container-fluid">
 		<div class="container">
-			In November, you have a choice.
-			Nebraska deserves better than Deb Fischer.
-			We deserve an elected official who will stand up for regular Nebraskans.
-			* Register to vote form here
+			<p>We Nebraskans deserve an elected official who represents us. We deserve better than Deb Fischer. This November, make your voice heard. GO VOTE!<p>
+		  <p>Registering to vote online is easy and only takes a couple minutes.</p>
+			<div style="margin-top: 50px;" class="text-center"><a href="https://www.nebraska.gov/apps-sos-voter-registration/" class="btn btn-success btn-lg">Register to Vote</a></div>
 		</div>
 	</article>
 
