Add more Nebraska

--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -109,12 +109,13 @@
 			<p>We Nebraskans deserve an elected official who represents us. We deserve better than Deb Fischer. This November, make your voice heard. GO VOTE!<p>
 		  <p>Registering to vote online is easy and only takes a couple minutes.</p>
 			<div style="margin-top: 50px;" class="text-center"><a href="https://www.nebraska.gov/apps-sos-voter-registration/" class="btn btn-success btn-lg">Register to Vote</a></div>
+			<div class="text-center" style="margin-top: 100px;"><img src="nebraskabig.png" /></div>
 		</div>
 	</article>
 
 	<article id="OurAd">
-			<img src="Ad.png" alt="Our Omaha World Herald Ad" class="center-block img-responsive" />
-		</article>
+		<img src="Ad.png" alt="Our Omaha World Herald Ad" class="center-block img-responsive" />
+	</article>
 	
 	<footer class="footer">
 		<div class="container" style="text-align: center;">
