--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -106,10 +106,9 @@
 
 	<article id="Vote" class="container-fluid">
 		<div class="container">
-			<p>We Nebraskans deserve an elected official who represents us. We deserve better than Deb Fischer. This November, make your voice heard. GO VOTE!<p>
-		  <p>Registering to vote online is easy and only takes a couple minutes.</p>
+			<p>We Nebraskans deserve an elected official who represents us. We deserve better than Deb Fischer. This November, make your voice heard. GO VOTE! Registering to vote online is easy and only takes a couple minutes.<p>
 			<div style="margin-top: 50px;" class="text-center"><a href="https://www.nebraska.gov/apps-sos-voter-registration/" class="btn btn-success btn-lg">Register to Vote</a></div>
-			<div class="text-center" style="margin-top: 100px;"><img src="nebraskabig.png" /></div>
+			<div class="text-center" style="margin-top: 50px;"><img src="nebraskabig.png" /></div>
 		</div>
 	</article>
 
