--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -112,7 +112,7 @@
 		</div>
 	</article>
 
-	<article id="OurAd">
+	<article>
 		<img src="Ad.png" alt="Our Omaha World Herald Ad" class="center-block img-responsive" />
 	</article>
 	
