--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:900" rel="stylesheet">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-72162275-3"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+	
+			gtag('config', 'UA-72162275-3');
+		</script>
 </head>
 <body>
 	<!-- Facebook SDK -->
@@ -113,16 +123,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
 	<script src="js/site.js"></script>
 	<!-- / Scripts -->
-
-	<!-- Google Analytics -->
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-		ga('create', 'UA-72162275-3', 'auto');
-		ga('send', 'pageview');
-	</script>
 
 </body>
 </html>
