Add photo attribution

--- a/fischertaxes/index.html
+++ b/fischertaxes/index.html
@@ -129,6 +129,7 @@
 	
 	<footer class="footer">
 		<div class="container" style="text-align: center;">
+			<div><a href="https://www.flickr.com/photos/senatormccaskill/10858974015/in/photostream/">Ad Photo by Senator Claire McCaskill</a>, licensed under <a href="https://creativecommons.org/licenses/by-nd/2.0/">CC BY-ND 2.0</a></div>
 			<div>Email: <a href="mailto:indivisiblelincoln@gmail.com">indivisiblelincoln@gmail.com</a></div>
 			<div>Facebook: <a href="https://www.facebook.com/indivisiblelincoln/">Indivisible Lincoln</a></div>
 			<div>Twitter: <a href="https://twitter.com/indivisibleLNK">@indivisibleLNK</a></div>
